# pylipextractor

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  example_usage.py  pyproject.toml  save_npy_frames_to_images.py
examples/: example_usage.py  save_npy_frames_to_images.py
pylibextractor/: lip_extractor.py
pylipextractor/: config.py  lip_extractor.py
